tests/build/cases/widget_new/missing_field_multi.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
  --> cases/widget_new/missing_field_multi.rs:9:9
   |
5  |       let _ = Wgt! {
   |  _____________-
6  | |         // background_gradient has two fields
7  | |         // the error highlights the property
8  | |         // in a struct initializer the struct name is highlighted
9  | |         background_gradient = {
   | |         ^^^^^^^^^^^^^^^^^^^
10 | |             axis: 0.deg(),
11 | |         }
12 | |     };
   | |_____- an argument is missing
   |
note: method defined here
  --> $WORKSPACE/zero-ui/src/properties/visual.rs
   |
   | / #[property(FILL, default(0.deg(), {
   | |     let c = colors::BLACK.transparent();
   | |     crate::core::gradient::stops![c, c]
   | | }))]
   | |____^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   --> $WORKSPACE/zero-ui/src/widgets.rs
    |
    | background_gradient(axis, /* stops */)
    |
